my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/pr41935.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr41935.c:9:23: error: fields must have a constant size: 'variable length array in structure' extension will never be supported
    9 |   struct S { int a; T b[n]; };
      |                       ^
1 error generated.
